--- a/home.html
+++ b/home.html
@@ -29,7 +29,10 @@
             </ul>
         </nav>
         <div class="landscape__container">
-            <video src="" class="landscape__video" autoplay loop muted></video>
+            <video  class="landscape__video" autoplay loop muted>
+                <source src="./assets/Catholic_Church_3D_Flythrough.mp4" type="video/mp4">
+                Your video does not support the video tag
+            </video>
             <h1 class="landscape__title">
                 Win Souls and Make Disciples
             </h1>
