On Community Section

--- a/home.html
+++ b/home.html
@@ -5,48 +5,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+    </style>
+
     <title>FCC New Beginning</title>
 </head>
 <body>
     <section id="landscape">
-        <nav class="nav__container">
-            <ul class="nav__list">
-                <img src="" alt="FCC New Beginning" class="logo">
-            </ul>
-            <ul class="nav__list">
-                <li class="nav__lists">
-                    <a href="#about" class="nav__link">About</a>
-                </li>
-                <li class="nav__lists">
-                    <a href="#community" class="nav__link">Community</a>
-                </li>
-                <li class="nav__lists">
-                    <a href="#events" class="nav__link">Events</a>
-                </li>
-                <li class="nav__lists">
-                    <a href="#connect" class="nav__link">Connect</a>
-                </li>
-            </ul>
-        </nav>
         <div class="landscape__container">
-            <video  class="landscape__video" autoplay loop muted>
-                <source src="./assets/Catholic_Church_3D_Flythrough.mp4" type="video/mp4">
-                Your video does not support the video tag
+            <nav class="nav__container">
+                <ul class="nav__list">
+                    <img src="" alt="FCC New Beginning" class="logo">
+                </ul>
+                <ul class="nav__list">
+                    <li class="nav__lists">
+                        <a href="#about" class="nav__link">About</a>
+                    </li>
+                    <li class="nav__lists">
+                        <a href="#community" class="nav__link">Community</a>
+                    </li>
+                    <li class="nav__lists">
+                        <a href="#events" class="nav__link">Events</a>
+                    </li>
+                    <li class="nav__lists">
+                        <a href="#connect" class="nav__link">Connect</a>
+                    </li>
+                </ul>
+            </nav>
+            <video class="landscape__video" autoplay loop muted>
+                <source src="assets/PlaceholderVideo.mp4" >
             </video>
-            <h1 class="landscape__title">
-                Win Souls and Make Disciples
-            </h1>
-            <h2 class="landscape__sub--title">
-                Sundays at 9:30AM
-            </h2>
+            <div class="landscape__headings">
+                <h1 class="landscape__title">
+                    Win Souls and Make Disciples
+                </h1>
+                <h2 class="landscape__sub--title">
+                    Sundays at 9:30AM
+                </h2>
+                <button class="landscape__btn">
+                    Plan A Visit
+                </button>
+            </div>
         </div>
-
     </section>
     <section id="about">
-
+        <div class="about__container">
+            <h1 class="about__title">
+                Family Christian Church
+            </h1>
+            <h4 class="about__info">
+                Our mission is to glorify God by winning souls, making disciples, and sharing His love with our community. Together, we seek to build a Christ-centered family where faith grows and lives are transformed.
+            </h4>
+            <h4 class="about__sub--title">
+                We'd love to have you and your family! <br />
+                6030 El Rancho Drive <br />
+                Whittier, CA, 90606
+            </h4>
+        </div>
     </section>
     <section id="community">
-
+        <div class="community__container">
+            <div class="community__heading--container">
+                <h1 class="community__heading--title">
+                    
+                </h1>
+            </div>
+        </div>
     </section>
     <section id="events">
 
