--- a/home.html
+++ b/home.html
@@ -179,7 +179,7 @@
                 <li><a href="#community" class="footer__link">Community</a></li>
                 <li><a href="#contact" class="footer__link">Contact</a></li>
             </ul>
-            <p class="footer__copyright">&copy; 2025 Your Brand. All rights reserved.</p>
+            <p class="footer__copyright">&copy; FCC New Beginning</p>
         </div>
     </footer>
     
