--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
                 </ul>
             </nav>
             <video class="landscape__video" autoplay loop muted>
-                <source src="assets/PlaceholderVideo.mp4" >
+                <source src="assets/funnyhahahaha.mp4" >
             </video>
             <div class="landscape__headings">
                 <h1 class="landscape__title">
