--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     </style>
 
-    <title>FCC New Beginning</title>
+    <title>The Family Christian Church</title>
 </head>
 <body>
     <section id="landscape">
@@ -38,7 +38,7 @@
                     Win Souls and Make Disciples
                 </h1>
                 <h2 class="landscape__sub--title">
-                    Sundays at 9:30AM
+                    Sunday Worship at 9:30AM
                 </h2>
                 <button class="landscape__btn">
                     Plan A Visit
